@@ -21,41 +21,50 @@ import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
+ *
  * @author Lucas L., Abraham A., Jordan A.
  */
 public class SDSController {
-    @FXML private TextField fileSearchField;
-    @FXML private Button fileSearchButton;
+
+    /* table widgets */
+    @FXML private TextField dataSearchField;
+    @FXML private Button    dataSearchButton;
     @FXML private TableView<ObservableList<String>> SDSdataTable;
-    @FXML private Label statusBar;
-    @FXML private Button addRowBtn;
+    @FXML private Button    addRowBtn;
+    @FXML private Label     dataStatusBar;
 
-    @FXML private TextField     dataSearchField;
-    @FXML private Button        dataSearchButton;
+    /* file-browser widgets */
+    @FXML private TextField fileSearchField;
+    @FXML private Button    fileSearchButton;
     @FXML private ListView<Path> sdsList;
-    @FXML private Label dataStatusBar;
 
+    /* toggle button declared in FXML */
+    @FXML private Button tableBttn;
 
-    private final QueryManager queries      = new QueryManager();
-    private final MetadataService metadata   = new MetadataService();
-    private final ObservableList<ObservableList<String>> fullData = FXCollections.observableArrayList();
-
+    /* constants / state */
     private static final String TABLE_NAME = "SDS";
-    private static final Path SDS_DIR = Paths.get("data", "SDS");
-    private final ObservableList<Path> fullList = FXCollections.observableArrayList();
+    private static final Path   SDS_DIR    = Paths.get("data", "SDS");
 
+    private final QueryManager    queries   = new QueryManager();
+    private final MetadataService metadata  = new MetadataService();
+
+    private final ObservableList<ObservableList<String>> fullData  = FXCollections.observableArrayList();
+    private final ObservableList<Path>                   fullFiles = FXCollections.observableArrayList();
+
+    /* life-cycle */
     @FXML
     public void initialize() {
-        // Load the initial SDS table data
+
+        /* build both panes */
         loadTable();
-
-        // Wire up search actions
-        dataSearchField.setOnAction(evt -> doDataSearch());
-        dataSearchButton.setOnAction(evt -> doDataSearch());
-        addRowBtn.setOnAction(evt -> showAddDialog());
-
         loadDirectory();
 
+        /* table search / add */
+        dataSearchField.setOnAction(e -> doDataSearch());
+        dataSearchButton.setOnAction(e -> doDataSearch());
+        addRowBtn.setOnAction(e -> showAddDialog());
+
+        /* file search + open */
         fileSearchField.setOnAction(e -> doFileSearch());
         fileSearchButton.setOnAction(e -> doFileSearch());
 
@@ -65,44 +74,46 @@ public class SDSController {
                 setText(empty || p == null ? null : p.getFileName().toString());
             }
         });
-
         sdsList.setOnMouseClicked(ev -> {
-            if (ev.getClickCount() == 2 && sdsList.getSelectionModel().getSelectedItem() != null) {
+            if (ev.getClickCount() == 2 && sdsList.getSelectionModel().getSelectedItem() != null)
                 openFileAsync(sdsList.getSelectionModel().getSelectedItem());
-            }
         });
+
+        /* optional: toggle which pane is visible */
+        if (tableBttn != null) {
+            tableBttn.setOnAction(e -> togglePanes());
+        }
     }
 
+    /* directory (right pane) */
     private void loadDirectory() {
-        fullList.clear();
+        fullFiles.clear();
 
         if (!Files.isDirectory(SDS_DIR)) {
             dataStatusBar.setText("Directory not found: " + SDS_DIR.toAbsolutePath());
             return;
         }
         try (var stream = Files.list(SDS_DIR)) {
-            fullList.addAll(stream
+            fullFiles.addAll(stream
                     .sorted(Comparator.comparing(p -> p.getFileName().toString().toLowerCase()))
                     .collect(Collectors.toList()));
         } catch (IOException ex) {
             dataStatusBar.setText("Error reading directory: " + ex.getMessage());
             return;
         }
-
-        sdsList.setItems(fullList);
-        dataStatusBar.setText(fullList.size() + " files");
+        sdsList.setItems(fullFiles);
+        dataStatusBar.setText(fullFiles.size() + " files");
     }
 
     private void doFileSearch() {
         String q = fileSearchField.getText().trim().toLowerCase();
         if (q.isEmpty()) {
-            sdsList.setItems(fullList);
+            sdsList.setItems(fullFiles);
             dataStatusBar.setText("Showing all files");
             return;
         }
         FilteredList<Path> filtered =
-                new FilteredList<>(fullList,
-                        p -> p.getFileName().toString().toLowerCase().contains(q));
+                new FilteredList<>(fullFiles, p -> p.getFileName().toString().toLowerCase().contains(q));
 
         sdsList.setItems(filtered);
         dataStatusBar.setText(filtered.size() + " files match \"" + q + "\"");
@@ -114,63 +125,46 @@ public class SDSController {
                 if (Desktop.isDesktopSupported()) {
                     Desktop.getDesktop().open(file.toFile());
                 } else {
-                    showInfo("This platform can’t auto-open files.\n\nPath:\n" +
-                             file.toAbsolutePath());
+                    showInfo("This platform can’t auto-open files.\n\n" + file.toAbsolutePath());
                 }
             } catch (Exception ex) {
-                showInfo("Couldn’t open the file:\n" + ex.getMessage() +
-                         "\n\nPath:\n" + file.toAbsolutePath());
+                showInfo("Couldn’t open file:\n" + ex.getMessage() + "\n\n" + file.toAbsolutePath());
             }
         }, "file-opener").start();
     }
 
-    private void showInfo(String msg) {
-        javafx.application.Platform.runLater(() ->
-                new Alert(Alert.AlertType.INFORMATION, msg).showAndWait());
-    }
-
+    /* database table (left pane) */
     private void loadTable() {
         try {
             SDSdataTable.getColumns().clear();
             fullData.clear();
 
-            // Retrieve column metadata
             List<ColumnData> colsMeta = metadata.getColumns(TABLE_NAME);
-            List<String> colNames = colsMeta.stream()
-                    .map(ColumnData::getName)
-                    .collect(Collectors.toList());
+            List<String>     colNames = colsMeta.stream().map(ColumnData::getName).toList();
 
-            // Load all rows
-            List<Map<String, Object>> rows = queries.selectAll(TABLE_NAME);
-            for (Map<String, Object> row : rows) {
-                ObservableList<String> obsRow = FXCollections.observableArrayList();
-                for (String col : colNames) {
-                    obsRow.add(Objects.toString(row.get(col), ""));
-                }
-                fullData.add(obsRow);
+            /* rows */
+            for (Map<String,Object> row : queries.selectAll(TABLE_NAME)) {
+                ObservableList<String> obs = FXCollections.observableArrayList();
+                for (String c : colNames) obs.add(Objects.toString(row.get(c), ""));
+                fullData.add(obs);
             }
 
-            // Create columns dynamically
+            /* columns */
             for (int i = 0; i < colNames.size(); i++) {
                 final int idx = i;
-                String colName = colNames.get(i);
+                final String colName = colNames.get(i);
 
                 TableColumn<ObservableList<String>, String> col = new TableColumn<>(colName);
                 col.setCellValueFactory(cd -> new SimpleStringProperty(cd.getValue().get(idx)));
-
-                // Allow editing if needed
                 col.setCellFactory(TextFieldTableCell.forTableColumn());
                 col.setOnEditCommit(ev -> {
-                    ObservableList<String> editedRow = ev.getRowValue();
+                    ObservableList<String> row = ev.getRowValue();
                     String oldVal = ev.getOldValue();
                     String newVal = ev.getNewValue();
                     if (!Objects.equals(oldVal, newVal)) {
-                        // Update DB using first column (assumed PK) as identifier
-                        Object pk = editedRow.get(0);
-                        queries.updateRow(TABLE_NAME,
-                                Map.of(colName, newVal),
-                                pk);
-                        editedRow.set(idx, newVal);
+                        Object pk = row.get(0);               // first column = PK
+                        queries.updateRow(TABLE_NAME, Map.of(colName, newVal), pk);
+                        row.set(idx, newVal);
                         dataStatusBar.setText("Updated " + colName);
                     }
                 });
@@ -181,8 +175,9 @@ public class SDSController {
             SDSdataTable.setItems(fullData);
             SDSdataTable.setEditable(true);
             dataStatusBar.setText("Loaded \"" + TABLE_NAME + "\" (" + fullData.size() + " rows)");
+
         } catch (Exception e) {
-            dataStatusBar.setText("Error loading table \"" + TABLE_NAME + "\": " + e.getMessage());
+            dataStatusBar.setText("Error loading table: " + e.getMessage());
         }
     }
 
@@ -193,11 +188,9 @@ public class SDSController {
             dataStatusBar.setText("Showing all rows");
             return;
         }
-
         FilteredList<ObservableList<String>> filtered =
-                new FilteredList<>(fullData, row ->
-                        row.stream().anyMatch(cell -> cell.toLowerCase().contains(q))
-                );
+                new FilteredList<>(fullData,
+                        row -> row.stream().anyMatch(cell -> cell.toLowerCase().contains(q)));
 
         SDSdataTable.setItems(filtered);
         dataStatusBar.setText(filtered.size() + " rows match \"" + q + "\"");
@@ -209,5 +202,20 @@ public class SDSController {
             queries.insertRow(TABLE_NAME, v);
             loadTable();
         }).showAndWait();
+    }
+
+    /* helpers */
+    private void showInfo(String msg) {
+        javafx.application.Platform.runLater(() ->
+                new Alert(Alert.AlertType.INFORMATION, msg).showAndWait());
+    }
+
+    private void togglePanes() {
+        boolean tableVisible = SDSdataTable.isVisible();
+        SDSdataTable.setVisible(!tableVisible);
+        SDSdataTable.setManaged(!tableVisible);
+
+        sdsList.setVisible(tableVisible);
+        sdsList.setManaged(tableVisible);
     }
 }
